<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp">

    <TextView
        android:id="@+id/model_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/effect_text"
        android:textColor="@android:color/black" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@id/model_title"
        android:layout_alignParentRight="true"
        android:gravity="right"
        android:text="@string/feature_text"
        android:textColor="@android:color/black"/>

    <RadioGroup
        android:id="@+id/model_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/model_title"
        android:layout_marginTop="20dp">

        <RadioButton
            android:id="@+id/mean_blur_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mean_blur" />

        <RadioButton
            android:id="@+id/gaussian_blur_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gaussian_blur" />

        <RadioButton
            android:id="@+id/sharpen_kernel_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sharpen_kernel" />

        <RadioButton
            android:id="@+id/dilation_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dilation" />

        <RadioButton
            android:id="@+id/erosion_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/erosion" />

        <RadioButton
            android:id="@+id/threshold_binary_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/threshold_binary"/>

        <RadioButton
            android:id="@+id/threshold_trunc_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/threshold_trunc"/>

        <RadioButton
            android:id="@+id/threshold_to_zero_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/threshold_to_zero"/>

        <RadioButton
            android:id="@+id/adaptive_threshold_gaussian_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/adaptive_threshold_gaussian"/>
    </RadioGroup>

    <RadioGroup
        android:id="@+id/feature_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@id/model_group">

        <RadioButton
            android:id="@+id/dog_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dog"/>

        <RadioButton
            android:id="@+id/canny_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/canny"/>

        <RadioButton
            android:id="@+id/sobel_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sobel"/>

        <RadioButton
            android:id="@+id/harris_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/harris_corner"/>

        <RadioButton
            android:id="@+id/hough_line_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hough_line"/>

        <RadioButton
            android:id="@+id/hough_circle_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hough_circles"/>

    </RadioGroup>

    <Button
        android:id="@+id/go_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/model_group"
        android:layout_marginTop="20dp"
        android:background="@android:color/holo_blue_bright"
        android:text="@string/go" />

</RelativeLayout>