<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.wangweimin.opencvtest.MainActivity">
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_load_image"
        android:title="@string/action_load_image"
        android:orderInCategory="1"
        app:showAsAction="never"
        />

    <item
        android:id="@+id/action_select_mode"
        android:title="@string/action_select_mode"
        android:orderInCategory="2"
        app:showAsAction="ifRoom"
        />

    <item
        android:id="@+id/action_select_original"
        android:title="@string/action_select_original"
        android:orderInCategory="3"
        app:showAsAction="never"
        />

</menu>
