<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.wangweimin.opencvtest.MainActivity"
    tools:showIn="@layout/activity_main">

    <LinearLayout
        android:id="@+id/image_contrast_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <RelativeLayout
            android:id="@+id/image_layout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="5">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:text="@string/original" />

            <ImageView
                android:id="@+id/ivImage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:contentDescription="@string/original_des" />

        </RelativeLayout>

        <ImageView
            android:layout_width="2dp"
            android:layout_height="350dp"
            android:layout_margin="2dp"
            android:layout_weight="0.1"
            android:contentDescription="@string/divider"
            android:src="@android:color/holo_blue_bright" />

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="5">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:text="@string/processed" />

            <ImageView
                android:id="@+id/ivImageProcessed"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:contentDescription="@string/processed_des" />
        </RelativeLayout>

    </LinearLayout>

    <ImageView
        android:id="@+id/image_divider"
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:layout_margin="2dp"
        android:layout_below="@id/image_contrast_layout"
        android:contentDescription="@string/divider"
        android:src="@android:color/holo_blue_bright" />

    <TextView
        android:id="@+id/process_model_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:layout_marginTop="20dp"
        android:layout_below="@id/image_divider"
        android:hint="@string/choose_hint"/>

</RelativeLayout>
